--- a/index.css
+++ b/index.css
@@ -12,24 +12,75 @@ body {
     z-index: 0;
 }
 
-/* Home section */
-.home {
-    height: 100vh;
+/* Navbar */
+
+.navbar {
+    position: fixed;
+    width: 100%;
+
+    background-color: rgb(26, 22, 22);
+    overflow: hidden;
 }
 
-.name-plate {
-    height: 100%;
+.navbar ul {
+    list-style: none;
+    margin: 0;
+}
+
+.navbar li {
+    float: left;
+    padding: 16px;
+    color: white;
     text-align: center;
 }
 
+.navbar li:hover{
+    background-color: maroon;
+}
+
+.navbar .right {
+    float: right;
+}
+
+.navbar a {
+    display: block;
+    text-decoration: none;
+    color: white;
+}
+
+.navbar .fa-tint {
+    /* Hack to make fa-tint and fa-tint-slash the same width */
+    width: 20px;
+}
+
+/* Home section */
+.home {
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+}
+
+/* .name {
+    height: 100%;
+    text-align: center;
+} */
+
+.name-plate {
+    text-align: center;
+    width: 100%;
+}
+
 .name-separator {
+    width: 180px;
+
     border: 2px solid maroon;
     margin-bottom: 0;
 }
 
-
 /* Footer */
 .footer {
+    position: relative;
     height: 100px;
 
     background: gray;
