--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: black;
     color: white;
@@ -29,7 +33,6 @@ body {
 
 .navbar li {
     float: left;
-    padding: 16px;
     color: white;
     text-align: center;
 }
@@ -44,6 +47,7 @@ body {
 
 .navbar a {
     display: block;
+    padding: 16px;
     text-decoration: none;
     color: white;
 }
@@ -81,7 +85,7 @@ body {
 /* Footer */
 .footer {
     position: relative;
-    height: 100px;
+    height: 70px;
 
     background: gray;
     display: flex;
@@ -93,7 +97,7 @@ body {
     text-align: center;
     vertical-align: middle;
 
-    padding-top: 25px;
+    padding-top: 20px;
 }
 
 .footer-email:hover {
