--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
 }
 
 body {
@@ -65,11 +65,6 @@ body {
     align-items: center;
 }
 
-/* .name {
-    height: 100%;
-    text-align: center;
-} */
-
 .name-plate {
     text-align: center;
     width: 100%;
@@ -80,6 +75,40 @@ body {
 
     border: 2px solid maroon;
     margin-bottom: 0;
+}
+
+/* About Section */
+.about {
+    /* TODO: Remove height */
+    height: 100vh;
+}
+
+.about-blurb {
+    margin: 0 10%;
+    width: 80%;
+}
+
+.about-interests {
+    text-align: center;
+}
+
+.about-gallery {
+    display: flex;
+    position: relative;
+}
+
+.about-gallery-entry {
+    display: relative;
+    flex-grow: 1;
+    transition: 1s;
+
+    /* TODO: Remove */
+    height: 120px;
+    border: red solid 2px;
+}
+
+.about-gallery-entry:hover {
+    flex-grow: 2;
 }
 
 /* Footer */
