--- a/styles/index.css
+++ b/styles/index.css
@@ -16,6 +16,13 @@ body {
     z-index: 0;
 }
 
+.homeCanvas {
+    position: absolute;
+
+    height: 100%;
+    width: 100%;
+}
+
 h2 {
     text-align: center;
     position: relative;
