--- a/styles/index.css
+++ b/styles/index.css
@@ -16,13 +16,10 @@ body {
     z-index: 0;
 }
 
-.homeCanvas {
-    position: absolute;
-
-    height: 100%;
-    width: 100%;
+h1 {
+    text-align: center;
+    position: relative;
 }
-
 h2 {
     text-align: center;
     position: relative;
@@ -76,8 +73,7 @@ h2 {
 
     display: flex;
     align-items: center;
-
-    background: #000000;
+    background-colpr: rgb(26, 22, 22);
 }
 
 .name-plate {
@@ -87,9 +83,14 @@ h2 {
 
 .name-separator {
     width: 180px;
-
     border: 2px solid maroon;
     margin-bottom: 0;
+}
+
+.home-sky {
+    position: absolute;
+    height: 100vh;
+    width: 100%;
 }
 
 /* About Section */
