--- a/styles/index.css
+++ b/styles/index.css
@@ -73,7 +73,6 @@ h2 {
 
     display: flex;
     align-items: center;
-    background-colpr: rgb(26, 22, 22);
 }
 
 .name-plate {
@@ -82,12 +81,20 @@ h2 {
 }
 
 .name-separator {
-    width: 180px;
+    /* width: 180px; */
+    width: 100vw;
     border: 2px solid maroon;
     margin-bottom: 0;
 }
 
 .home-sky {
+    position: absolute;
+    top: 0;
+    height: 65vh;
+    width: 100%;
+}
+
+.home-svg {
     position: absolute;
     height: 100vh;
     width: 100%;
