--- a/styles/index.css
+++ b/styles/index.css
@@ -70,20 +70,26 @@ h2 {
 /* Home section */
 .home {
     height: 100vh;
+    width: 100%;
 
     display: flex;
     align-items: center;
-    background: #dddddd;
+    z-index: -2;
 }
 
-.name-plate {
-    text-align: center;
+.home-overlay {
+    position: absolute;
+    height: 100vh;
     width: 100%;
 }
 
+.name-plate {
+    margin: auto;
+}
+
 .name-separator {
-    /* width: 180px; */
-    width: 100vw;
+    position: relative;
+    width: 180px;
     border: 2px solid maroon;
     margin-bottom: 0;
 }
@@ -94,13 +100,13 @@ h2 {
     height: 60vh;
     width: 100%;
     background: black;
-    border-bottom: maroon 5px solid;
 }
 
 .home-svg {
     position: absolute;
     height: 100vh;
     width: 100%;
+    z-index: -1;
 }
 
 /* About Section */
