--- a/styles/index.css
+++ b/styles/index.css
@@ -69,18 +69,12 @@ h2 {
 
 /* Home section */
 .home {
+    position: relative;
     height: 100vh;
     width: 100%;
 
     display: flex;
     align-items: center;
-    z-index: -2;
-}
-
-.home-overlay {
-    position: absolute;
-    height: 100vh;
-    width: 100%;
 }
 
 .name-plate {
@@ -91,7 +85,6 @@ h2 {
     position: relative;
     width: 180px;
     border: 2px solid maroon;
-    margin-bottom: 0;
 }
 
 .home-sky {
@@ -116,8 +109,23 @@ h2 {
 }
 
 .about-blurb {
-    margin: 0 10%;
-    width: 80%;
+    display: inline-block;
+    padding: 10% 10%;
+}
+
+.about-image {
+    position: relative;
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+}
+
+.about-text {
+    position: relative;
+    display: inline-block;
+    width: 50%;
+    vertical-align: middle;
+    text-align: center;
 }
 
 /* Work Section */
