--- a/styles/index_light.css
+++ b/styles/index_light.css
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-    background: #0c0c0c;
-    color: #f5f5f5;
+    background: #f5f5f5;
+    color: #000000;
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
 }
@@ -20,7 +20,7 @@ body {
 h1 {
     text-align: center;
     position: relative;
-    text-shadow: 1px 1px 3px #000000, -1px -1px 3px #000000;
+    text-shadow: 1px 1px 3px #f5f5f5, -1px -1px 3px #f5f5f5;
 }
 h2 {
     text-align: center;
@@ -34,7 +34,7 @@ h2 {
     right: 0;
     z-index: 1;
 
-    background-color: transparent;
+    background-color: ;
     overflow: hidden;
 }
 
@@ -56,7 +56,7 @@ h2 {
     display: block;
     padding: 16px;
     text-decoration: none;
-    color: #f5f5f5;
+    color: #000000;
 }
 
 .navbar .fa-tint {
@@ -100,15 +100,15 @@ h2 {
 }
 
 .moon {
-    fill: #f5f5f5
+    fill: #000000
 }
 
 .moon-overlay-circle {
-    fill: #0c0c0c
+    fill: #f5f5f5
 }
 
 .moon-overlay-rectangle {
-    fill: #0c0c0c
+    fill: #f5f5f5
 }
 
 .home-down-button:focus,.home-down-button:hover {
@@ -195,7 +195,7 @@ h2 {
     vertical-align: middle;
 
     padding-top: 20px;
-    color: #f5f5f5;
+    color: #000000;
 }
 
 .contact-email:hover {
