--- a/styles/index.css
+++ b/styles/index.css
@@ -96,7 +96,8 @@ h2 {
     font-size: 3em;
     top: 90%;
     left: 50%;
-    margin-left: -1em;
+    /* margin-left: -1em; */
+    transform: translateX(-50%);
 }
 
 .moon {
@@ -113,14 +114,11 @@ h2 {
 
 .home-down-button:focus,.home-down-button:hover {
     transition: 0.5s;
-    transform: scale(1.1);
     color: maroon;
 }
 
 /* Section */
-.section-header {
 
-}
 .section-separator {
     position: relative;
     width: 280px;
