--- a/styles/index_light.css
+++ b/styles/index_light.css
@@ -4,7 +4,7 @@ html {
 
 body {
     background: #f5f5f5;
-    color: #000000;
+    color: #0c0c0c;
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
 }
@@ -49,14 +49,14 @@ h2 {
 }
 
 .navbar li:hover, .navbar li:focus-within{
-    background-color: maroon;
+    background-color: #bb1e10;
 }
 
 .navbar a {
     display: block;
     padding: 16px;
     text-decoration: none;
-    color: #000000;
+    color: #0c0c0c;
 }
 
 .navbar .fa-tint {
@@ -81,7 +81,7 @@ h2 {
 .name-separator {
     position: relative;
     width: 180px;
-    border: 2px solid maroon;
+    border: 2px solid #bb1e10;
 }
 
 .home-svg {
@@ -100,7 +100,7 @@ h2 {
 }
 
 .moon {
-    fill: #000000
+    fill: #0c0c0c
 }
 
 .moon-overlay-circle {
@@ -114,7 +114,7 @@ h2 {
 .home-down-button:focus,.home-down-button:hover {
     transition: 0.5s;
     transform: scale(1.1);
-    color: maroon;
+    color: #bb1e10;
 }
 
 /* Section */
@@ -124,14 +124,14 @@ h2 {
 .section-separator {
     position: relative;
     width: 280px;
-    border: 2px solid maroon;
+    border: 2px solid #bb1e10;
     margin: 30px auto;
 }
 
 .list-card i {
     display: inline-block;
     margin-right: 20px;
-    color: maroon;
+    color: #bb1e10;
 }
 
 .list-card h3 {
@@ -141,6 +141,8 @@ h2 {
 
 .list-card h4 {
     position: relative;
+    font-size: 75%;
+    margin-top: 0;
     margin-left: 45px;
 }
 
@@ -195,7 +197,7 @@ h2 {
     vertical-align: middle;
 
     padding-top: 20px;
-    color: #000000;
+    color: #0c0c0c;
 }
 
 .contact-email:hover {
