make fixes and excuses

--- a/styles/index.css
+++ b/styles/index.css
@@ -96,7 +96,6 @@ h2 {
     font-size: 3em;
     top: 90%;
     left: 50%;
-    /* margin-left: -1em; */
     transform: translateX(-50%);
 }
 
@@ -230,5 +229,9 @@ h2 {
     .contact {
         width: 100%;
         left: 0;
+    }
+
+    .home-down-button {
+        top: 80%;
     }
 }
