--- a/styles/index.css
+++ b/styles/index.css
@@ -100,15 +100,15 @@ h2 {
 }
 
 .moon {
-    fill: #f5f5f5
+    fill: #f5f5f5;
 }
 
 .moon-overlay-circle {
-    fill: #0c0c0c
+    fill: #0c0c0c;
 }
 
 .moon-overlay-rectangle {
-    fill: #0c0c0c
+    fill: #0c0c0c;
 }
 
 .home-down-button:focus,.home-down-button:hover {
