--- a/styles/index.css
+++ b/styles/index.css
@@ -9,14 +9,6 @@ body {
     font-family: 'Ubuntu', sans-serif;
 }
 
-.canvas {
-    position: fixed;
-
-    height: 100%;
-    width: 100%;
-    z-index: 0;
-}
-
 h1 {
     text-align: center;
     position: relative;
@@ -72,6 +64,13 @@ h2 {
 
     display: flex;
     align-items: center;
+}
+
+.canvas {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 0;
 }
 
 .name-plate {
@@ -162,43 +161,71 @@ h2 {
     vertical-align: top;
     margin-left: 10%;
     margin-bottom: 10vh;
-    width: 40%;
+    width: 80%;
 }
 
 /* Projects Section */
 .projects {
     vertical-align: top;
     display: inline-block;
+    margin-left: 10%;
     margin-bottom: 10vh;
-    width: 40%;
+    width: 80%;
 }
 
 /* Footer */
-.footer {
+footer {
     width: 100%;
-    height: 70px;
     background: gray;
+    padding: 20px 0;
+}
+.footer-div {
+    display: flex;
+    margin: 0 10%;
+}
+
+.footer-about {
+    display: inline-block;
+    align-self: center;
+    width: 50%;
+    white-space: nowrap;
+}
+
+.footer-about img {
+    display: inline-block;
+    height: 100px;
+    width: 20%;
+    vertical-align: middle;
+}
+.footer-about div {
+    display: inline-block;
+    width: 80%;
+    vertical-align: middle;
+}
+.footer-about h3 {
+    padding: 0;
+    margin: 0;
 }
 
 .contact {
     display: inline-flex;
-    position: relative;
+    align-self: center;
     width: 50%;
-    height: 100%;
-    left: 25%;
 }
 
 .contact-link {
-    flex-grow: 1;
+    flex: 1;
     text-align: center;
-    vertical-align: middle;
-
-    padding-top: 20px;
     color: #f5f5f5;
+}
+.contact-circle {
+    border-radius: 50%;
+    padding: 10px;
+    background: #0c0c0c;
 }
 
 .contact-email:hover {
-    background: goldenrod;
+    background: #bb1e10;
 }
 .contact-github:hover {
     background: #4078c0;
@@ -215,23 +242,22 @@ h2 {
 
 @media only screen and (max-width: 768px) {
 
-    /* Work Section */
-    .work {
-        width: 80%;
+
+
+    /* Footer */
+    .footer-div {
+        margin: 0;
+        display: block;
     }
-    
-    /* Projects Section */
-    .projects {
-        margin-left: 10%;
-        width: 80%;
+    .footer-about {
+        display: flex;
+        margin: auto;
+        padding: 20px;
     }
 
     .contact {
+        display: flex;
         width: 100%;
-        left: 0;
-    }
-
-    .home-down-button {
-        top: 80%;
+        padding: 20px 0;
     }
 }
